...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imageViewAvailableTestMark"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:contentDescription="@string/available_test_mark_content_description"
            app:tint="@color/yellow"
            app:srcCompat="@android:drawable/presence_online"
            tools:ignore="Suspicious0dp"/>

        <ImageView
            android:id="@+id/imageViewCompletedTestMark"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:contentDescription="@string/completed_test_mark_content_description"
            app:tint="@color/green"
            app:srcCompat="@android:drawable/presence_online"
            tools:ignore="Suspicious0dp"/>
...
