<resources>
    <string name="text_view_authorization">Вход</string>
    <string name="app_name">Psychology athlete diary</string>
    <string name="text_view_registration">Регистрация</string>
    <string name="edit_text_person_name_hint">Имя</string>
    <string name="edit_text_person_surname_hint">Фамилия</string>
    <string name="edit_text_person_birth_date_hint">Дата рождения</string>
    <string name="edit_text_email_hint">Email</string>
    <string name="edit_text_password_hint">Пароль</string>
    <string name="edit_text_repeat_password_hint">Повторите пароль</string>
    <string name="text_view_role">Роль</string>
    <string name="radio_button_sportsman">Спортсмен</string>
    <string name="radio_button_psychologist">Психолог</string>
    <string name="button_registration">Зарегистрироваться</string>
    <string name="application_icon_content_description">Application icon</string>
    <string name="text_view_to_auth">Уже есть аккаунт?</string>
    <string name="button_authorization">Войти</string>
    <string name="button_exit">Выйти</string>
    <string name="text_view_sportsman_email">Email</string>
    <string name="text_view_birth_date">Дата рождения</string>
    <string name="button_requests">Заявки</string>
    <string name="button_menu_notes">Личные заметки</string>
    <string name="button_menu_calendar">Календарь</string>
    <string name="button_menu_profile">Профиль</string>
    <string name="text_view_sportsmen">Спортсмены</string>
    <string name="text_view_psychologist">Психолог</string>
    <string name="text_view_sportsman">Спортсмен</string>
    <string name="text_view_profile">Профиль</string>
    <string name="edit_text_password">Пароль</string>
    <string name="edit_text_login">Логин</string>
    <string name="text_view_to_reg_label">Нет аккаунта?</string>
    <string name="button_сonfirm">Подтвердить</string>
    <string name="text_view_assigned_tests">Назначенные тесты</string>
    <string name="text_view_not_completed_tests">Непройденные тесты</string>
    <string name="text_view_completed_tests">Пройденные тесты</string>
    <string name="text_view_available_tests">Доступные для прохождения тесты</string>
    <string name="floating_action_button_add_psychologist_description">Кнопка добавления психолога</string>
    <string name="text_view_requests">Заявки</string>
    <string name="enter_for_add_psychologist">Enter for add psychologist</string>
    <string name="assigned_test_mark_content_description">Assigned test mark</string>
    <string name="not_completed_test_mark_content_description">Not completed test mark</string>
    <string name="completed_test_mark_content_description">Completed test mark</string>
    <string name="available_test_mark_content_description">Available test mark</string>
    <string name="note_mark_content_description">Note mark</string>
    <string name="button_left"><![CDATA[<-]]></string>
    <string name="button_right"><![CDATA[->]]></string>
    <string name="text_view_sunday">Вс</string>
    <string name="text_view_saturday">Сб</string>
    <string name="text_view_thursday">Чт</string>
    <string name="text_view_wednesday">Ср</string>
    <string name="text_view_tuesday">Вт</string>
    <string name="text_view_monday">Пн</string>
    <string name="text_view_friday">Пт</string>
    <string name="menu_navigation_calendar">Календарь</string>
    <string name="menu_navigation_notes">Заметки</string>
    <string name="menu_navigation_profile">Профиль</string>
    <string name="button_show_legend">Показать легенду</string>
    <string name="floating_action_button_add_psychologist">Floating action button for adding psychologist</string>
    <string name="button_delete_psychologist">Удалить психолога</string>
    <string name="button_delete_sportsman">Удалить спортсмена</string>
    <string name="text_view_notes">Заметки</string>
    <string name="text_view_assignment_tests">Назначение теста</string>
    <string name="edit_text_psychologist_email_hint">Email вашего психолога</string>
    <string name="edit_text_situation">Введите текст...</string>
    <string name="text_view_situation">Ситуация</string>
    <string name="text_view_thoughts">Мысли</string>
    <string name="text_view_emotions">Эмоции</string>
    <string name="text_view_reactions">Реакции</string>
    <string name="button_save_notes">Сохранить</string>
    <string name="button_assign_test">Назначить тест</string>
    <string name="button_confirm_test_assignment">Назначить</string>
    <string name="text_view_select_tests">Выберите тесты</string>
    <string name="text_view_assigned_tests_legend">Есть запланированные тесты</string>
    <string name="text_view_available_tests_legend">Есть доступные для прохождения тесты</string>
    <string name="text_view_completed_tests_legend">Есть пройденные тесты</string>
    <string name="text_view_not_completed_tests_legend">Есть непройденные тесты</string>
    <string name="text_view_notes_legend">Есть заметки</string>
    <string name="button_close_legend">Закрыть</string>
    <string name="button_cancel_delete">Отменить</string>
    <string name="button_confirm_delete">Подтвердить</string>
    <string name="text_view_delete_assigned_test">Удалить назначенный тест?</string>
    <string name="text_view_no_actions">В этот день не производилось никаких действий</string>
    <string name="text_view_comment">Комментарий</string>
    <string name="text_view_no_sportsmen">У вас пока нет спортсменов</string>
    <string name="text_view_no_requests">У вас пока нет заявок</string>
    <string name="text_view_delete_sportsman">Удалить выбранного спортсмена?</string>
    <string name="text_view_delete_psychologist">Удалить психолога?</string>
    <string name="text_view_forgot_password">Восстановление пароля</string>
    <string name="text_view_to_back_label">Вернуться на</string>
    <string name="button_authorization_forgot_password">Войти</string>
    <string name="button_forgot_password">Восстановить</string>
    <string name="text_view_to_forgot_password_label">Забыли пароль?</string>
    <string name="button_restore_password">Восстановить</string>
</resources>
