...
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/buttonSportsmanProfileExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/button_exit"
                android:textColor="@color/white"
...
                    android:layout_height="150dp"
                    android:layout_marginVertical="5dp"
                    android:contentDescription="@string/application_icon_content_description"
                    app:srcCompat="@drawable/pictures_sportsman"/>

                <TextView
                    android:id="@+id/textViewSportsmanNameSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="5dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
...
                    android:padding="5dp"
                    android:text="@string/text_view_psychologist"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:id="@+id/linearLayoutAddPsychologist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/floatingActionButtonAddPsychologist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/my_light_pink"
                        android:clickable="true"
                        android:contentDescription="@string/floating_action_button_add_psychologist"
                        app:srcCompat="@android:drawable/ic_input_add"
                        app:tint="@color/white"/>

                    <EditText
                        android:id="@+id/editTextPsychologistEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/black"
...
